--- a/Git.Lfs.Test/Git.Lfs.Test.csproj
+++ b/Git.Lfs.Test/Git.Lfs.Test.csproj
@@ -47,7 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LfsCurlFile.cs" />
-    <Compile Include="LfsPointer.cs" />
+    <Compile Include="LfsHashTest.cs" />
+    <Compile Include="LfsPointerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
