--- a/Git.Lfs.Test/Git.Lfs.Test.csproj
+++ b/Git.Lfs.Test/Git.Lfs.Test.csproj
@@ -36,6 +36,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Collections.Immutable, Version=1.2.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Collections.Immutable.1.2.0\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Xml.Linq" />
@@ -46,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LfsEndToEndTest.cs" />
     <Compile Include="LfsBlobCacheTest.cs" />
     <Compile Include="LfsBlobStoreTest.cs" />
     <Compile Include="LfsConfigFileTest.cs" />
