--- a/Git/Git.csproj
+++ b/Git/Git.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{96B028A6-8644-4D03-83EF-55088FB00D21}</ProjectGuid>
+    <ProjectGuid>{AF1CF4F6-5B83-4B81-A290-EC939403055E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Git.Lfs.Test</RootNamespace>
-    <AssemblyName>Git.Lfs.Test</AssemblyName>
+    <RootNamespace>Git</RootNamespace>
+    <AssemblyName>Git</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -28,20 +28,10 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=3.4.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.4.1\lib\net45\nunit.framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Collections.Immutable, Version=1.2.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Collections.Immutable.1.2.0\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.Core" />
-    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,32 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LfsEndToEndTest.cs" />
-    <Compile Include="LfsBlobCacheTest.cs" />
-    <Compile Include="LfsBlobStoreTest.cs" />
-    <Compile Include="LfsConfigFileTest.cs" />
-    <Compile Include="LfsTest.cs" />
-    <Compile Include="LfsFileTest.cs" />
-    <Compile Include="LfsHashTest.cs" />
-    <Compile Include="LfsPointerTest.cs" />
+    <Compile Include="GitCmdArgs.cs" />
+    <Compile Include="GitCmdToken.cs" />
+    <Compile Include="GitConfigFile.cs" />
+    <Compile Include="GitCmd.cs" />
+    <Compile Include="GitLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Git.Lfs\Git.Lfs.csproj">
-      <Project>{15008f38-1c88-422e-9d87-fef319307dd0}</Project>
-      <Name>Git.Lfs</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Git.LfsEx\git-lfx.csproj">
-      <Project>{8ff39b3f-babe-4cd8-9ccd-43b74786dbdb}</Project>
-      <Name>git-lfx</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Git\Git.csproj">
-      <Project>{af1cf4f6-5b83-4b81-a290-ec939403055e}</Project>
-      <Name>Git</Name>
-    </ProjectReference>
+    <Compile Include="Util\Cmd.cs" />
+    <Compile Include="Util\Extensions.cs" />
+    <Compile Include="Util\Temp.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
