--- a/Git/Git.csproj
+++ b/Git/Git.csproj
@@ -48,8 +48,9 @@
     <Compile Include="GitConfigFile.cs" />
     <Compile Include="GitCmd.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Util\CmdProcess.cs" />
+    <Compile Include="Util\Cmd.cs" />
     <Compile Include="Util\Extensions.cs" />
+    <Compile Include="Util\CmdStream.cs" />
     <Compile Include="Util\Temp.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
