--- a/Git/Git.csproj
+++ b/Git/Git.csproj
@@ -47,10 +47,12 @@
     <Compile Include="GitConfigValue.cs" />
     <Compile Include="GitConfigFile.cs" />
     <Compile Include="GitCmd.cs" />
+    <Compile Include="GitHash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\Cmd.cs" />
     <Compile Include="Util\Extensions.cs" />
     <Compile Include="Util\CmdStream.cs" />
+    <Compile Include="Util\Hash.cs" />
     <Compile Include="Util\Temp.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
