--- a/Git.Lfx/Git.Lfx.csproj
+++ b/Git.Lfx/Git.Lfx.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8FF39B3F-BABE-4CD8-9CCD-43B74786DBDB}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{15008F38-1C88-422E-9D87-FEF319307DD0}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Git.Lfs</RootNamespace>
-    <AssemblyName>git-lfx</AssemblyName>
+    <RootNamespace>Git.Lfx</RootNamespace>
+    <AssemblyName>Git.Lfx</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,9 +20,9 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -32,9 +30,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-  </PropertyGroup>
-  <PropertyGroup>
-    <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -47,7 +42,6 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Core" />
-    <Reference Include="System.IO.Compression" />
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -57,34 +51,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Server\response.json" />
+    <Compile Include="Cache\LfxBlob.cs" />
+    <Compile Include="Cache\LfxBlobStore.cs" />
+    <Compile Include="Config\LfxConfig.cs" />
     <Compile Include="LfxCmd.cs" />
-    <Compile Include="Server\LfsServerUpload.cs" />
-    <Compile Include="Server\LfsServerDownload.cs" />
-    <Compile Include="Server\LfsServer.cs" />
-    <Compile Include="Server\WebServer.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Config\LfxConfigFile.cs" />
+    <Compile Include="LfxHash.cs" />
+    <Compile Include="LfxJson.cs" />
+    <Compile Include="Cache\LfxBlobCache.cs" />
+    <Compile Include="LfxPointer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\Extensions.cs" />
+    <Compile Include="Util\StreamCounter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Git.Lfs\Git.Lfs.csproj">
-      <Project>{15008f38-1c88-422e-9d87-fef319307dd0}</Project>
-      <Name>Git.Lfs</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Git\Git.csproj">
       <Project>{af1cf4f6-5b83-4b81-a290-ec939403055e}</Project>
       <Name>Git</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
-  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
