--- a/Git-Lfx/packages.config
+++ b/Git-Lfx/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.2.0" targetFramework="net452" />
+  <package id="System.Threading.Tasks.Dataflow" version="4.6.0" targetFramework="net452" />
 </packages>
