--- a/Git.Lfx/Git.Lfx.csproj
+++ b/Git.Lfx/Git.Lfx.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Cache\LfxBlob.cs" />
     <Compile Include="Cache\LfxBlobStore.cs" />
     <Compile Include="Config\LfxConfig.cs" />
+    <Compile Include="LfxFiles.cs" />
     <Compile Include="LfxCmd.cs" />
     <Compile Include="Config\LfxConfigFile.cs" />
     <Compile Include="LfxHash.cs" />
@@ -61,6 +62,9 @@
     <Compile Include="Cache\LfxBlobCache.cs" />
     <Compile Include="LfxPointer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\AssemblyVersion.cs">
+      <Link>Properties\AssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="Util\Extensions.cs" />
     <Compile Include="Util\StreamCounter.cs" />
   </ItemGroup>
