--- a/Git/Git.csproj
+++ b/Git/Git.csproj
@@ -49,6 +49,9 @@
     <Compile Include="GitCmd.cs" />
     <Compile Include="GitHash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\AssemblyVersion.cs">
+      <Link>Properties\AssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="Util\Cmd.cs" />
     <Compile Include="Util\Extensions.cs" />
     <Compile Include="Util\CmdStream.cs" />
