--- a/Git-Lfx/git-lfx.csproj
+++ b/Git-Lfx/git-lfx.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -37,18 +38,12 @@
     <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable, Version=1.2.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Collections.Immutable.1.2.0\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Core" />
-    <Reference Include="System.IO.Compression" />
-    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Threading.Tasks.Dataflow, Version=4.6.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Dataflow.4.6.0\lib\netstandard1.1\System.Threading.Tasks.Dataflow.dll</HintPath>
       <Private>True</Private>
@@ -57,15 +52,12 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="notes.txt" />
+    <Compile Include="LfxEnv.cs" />
     <Compile Include="LfxCmd.cs" />
-    <Compile Include="Server\LfxServerUpload.cs" />
-    <Compile Include="Server\LfxServerDownload.cs" />
-    <Compile Include="Server\LfxServer.cs" />
-    <Compile Include="Server\WebServer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="..\AssemblyVersion.cs">
@@ -79,13 +71,21 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Cmd\Cmd.csproj">
+      <Project>{9c70b383-ce1b-46a2-af45-d13b70d01812}</Project>
+      <Name>Cmd</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Git.Cmd\Git.Cmd.csproj">
+      <Project>{f14257af-3793-4613-bb88-f01412db29ae}</Project>
+      <Name>Git.Cmd</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Git.Lfx\Git.Lfx.csproj">
-      <Project>{15008f38-1c88-422e-9d87-fef319307dd0}</Project>
+      <Project>{15008F38-1C88-422E-9D87-FEF319307DD0}</Project>
       <Name>Git.Lfx</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Git\Git.csproj">
-      <Project>{af1cf4f6-5b83-4b81-a290-ec939403055e}</Project>
-      <Name>Git</Name>
+    <ProjectReference Include="..\Util\Util.csproj">
+      <Project>{9c33358d-6452-43a6-9d89-670ecd8c4358}</Project>
+      <Name>Util</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
