--- a/Git.Lfx/Git.Lfx.csproj
+++ b/Git.Lfx/Git.Lfx.csproj
@@ -32,16 +32,13 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable, Version=1.2.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Collections.Immutable.1.2.0\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -51,15 +48,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cache\LfxBlob.cs" />
-    <Compile Include="Cache\LfxBlobStore.cs" />
-    <Compile Include="Config\LfxConfig.cs" />
-    <Compile Include="LfxFiles.cs" />
+    <Compile Include="Cache\LfxTarget.cs" />
+    <Compile Include="Cache\LfxStore.cs" />
+    <Compile Include="LfxConfigFile.cs" />
+    <Compile Include="LfxConfig.cs" />
     <Compile Include="LfxCmd.cs" />
-    <Compile Include="Config\LfxConfigFile.cs" />
     <Compile Include="LfxHash.cs" />
-    <Compile Include="LfxJson.cs" />
-    <Compile Include="Cache\LfxBlobCache.cs" />
+    <Compile Include="Cache\LfxCache.cs" />
     <Compile Include="LfxPointer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="..\AssemblyVersion.cs">
@@ -72,10 +67,21 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Cmd\Cmd.csproj">
+      <Project>{9c70b383-ce1b-46a2-af45-d13b70d01812}</Project>
+      <Name>Cmd</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Git\Git.csproj">
       <Project>{af1cf4f6-5b83-4b81-a290-ec939403055e}</Project>
       <Name>Git</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Util\Util.csproj">
+      <Project>{9c33358d-6452-43a6-9d89-670ecd8c4358}</Project>
+      <Name>Util</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="pointer.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
