--- a/Util/Util.csproj
+++ b/Util/Util.csproj
@@ -32,6 +32,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,6 +45,7 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="Hash.cs" />
     <Compile Include="ImmutableAsyncDictionary.cs" />
+    <Compile Include="PathDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Temp.cs" />
   </ItemGroup>
