--- a/Util/Util.csproj
+++ b/Util/Util.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsyncSemaphore.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Hash.cs" />
     <Compile Include="ImmutableAsyncDictionary.cs" />
