--- a/Util/Util.csproj
+++ b/Util/Util.csproj
@@ -34,6 +34,10 @@
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.Threading.Tasks.Dataflow, Version=4.5.24.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Tpl.Dataflow.4.5.24\lib\portable-net45+win8+wpa81\System.Threading.Tasks.Dataflow.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,13 +48,16 @@
   <ItemGroup>
     <Compile Include="HardLinkEnumerator.cs" />
     <Compile Include="JunctionPoints.cs" />
-    <Compile Include="AsyncSemaphore.cs" />
+    <Compile Include="LazyTask.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Hash.cs" />
     <Compile Include="ImmutableAsyncDictionary.cs" />
     <Compile Include="PathDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Temp.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
