--- a/Git-Lfx/git-lfx.csproj
+++ b/Git-Lfx/git-lfx.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="notes.txt" />
+    <Compile Include="LfxProgressTracker.cs" />
     <Compile Include="LfxEnv.cs" />
     <Compile Include="LfxCmd.cs" />
     <Compile Include="Program.cs" />
