--- a/Git-Lfx/git-lfx.csproj
+++ b/Git-Lfx/git-lfx.csproj
@@ -59,6 +59,8 @@
     <Compile Include="LfxProgressTracker.cs" />
     <Compile Include="LfxEnv.cs" />
     <Compile Include="LfxCmd.cs" />
+    <None Include="resources\nuget\v1\shim.targets" />
+    <None Include="resources\nuget\v1\shim.props" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="..\AssemblyVersion.cs">
@@ -89,6 +91,7 @@
       <Name>Util</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
