--- a/Git.Lfx/Git.Lfx.csproj
+++ b/Git.Lfx/Git.Lfx.csproj
@@ -72,6 +72,12 @@
   <ItemGroup>
     <Content Include="pointer.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="resources\nuget\v1\shim.props" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="resources\nuget\v1\shim.targets" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
