--- a/Git-Lfx/packages.config
+++ b/Git-Lfx/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.2.0" targetFramework="net452" />
-  <package id="System.Threading.Tasks.Dataflow" version="4.6.0" targetFramework="net452" />
 </packages>
