--- a/Util/Util.csproj
+++ b/Util/Util.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="Hash.cs" />
     <Compile Include="ImmutableAsyncDictionary.cs" />
-    <Compile Include="PathDictionary.cs" />
+    <Compile Include="FileLock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Temp.cs" />
   </ItemGroup>
