--- a/Lfx.Test/Lfx.Test.csproj
+++ b/Lfx.Test/Lfx.Test.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F14257AF-3793-4613-BB88-F01412DB29AE}</ProjectGuid>
+    <ProjectGuid>{96B028A6-8644-4D03-83EF-55088FB00D21}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Git.Cmd</RootNamespace>
-    <AssemblyName>Git.Cmd</AssemblyName>
+    <RootNamespace>Lfx.Test</RootNamespace>
+    <AssemblyName>Lfx.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -28,10 +28,21 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=3.4.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.4.1\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Collections.Immutable, Version=1.2.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Collections.Immutable.1.2.0\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,9 +51,37 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GitCmdArgs.cs" />
-    <Compile Include="GitCmdToken.cs" />
+    <Compile Include="LfxArgsTest.cs" />
+    <Compile Include="LfxCmdTokenizeTest.cs" />
+    <Compile Include="LfxExe.cs" />
+    <Compile Include="LfxEndToEndTest.cs" />
+    <Compile Include="LfxBlobCacheTest.cs" />
+    <Compile Include="LfxBlobStoreTest.cs" />
+    <Compile Include="LfxConfigFileTest.cs" />
+    <Compile Include="LfxTest.cs" />
+    <Compile Include="LfxConfigTest.cs" />
+    <Compile Include="LfxHashTest.cs" />
+    <Compile Include="LfxPointerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\AssemblyVersion.cs">
+      <Link>Properties\AssemblyVersion.cs</Link>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Lfx\Lfx.csproj">
+      <Project>{8ff39b3f-babe-4cd8-9ccd-43b74786dbdb}</Project>
+      <Name>Lfx</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Util\Util.csproj">
+      <Project>{9c33358d-6452-43a6-9d89-670ecd8c4358}</Project>
+      <Name>Util</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
