--- a/lfx.nuspec
+++ b/lfx.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
-    <id>git-lfx</id>
+    <id>lfx</id>
     <version>0.2.0</version>
     <owners>kingces95</owners>
     <title>git curl extension</title>
@@ -15,9 +15,9 @@
     <docsUrl>https://github.com/kingces95/Lfx</docsUrl>
     <mailingListUrl>https://github.com/kingces95/Lfx</mailingListUrl>
     <bugTrackerUrl>https://github.com/kingces95/Lfx</bugTrackerUrl>
-    <tags>lfx lfs git</tags>
-    <summary>Extension of git-lfs which teaches git to fetch archives</summary>
-    <description>Git extension to (1) replace a file before it's pushed with a pointer (url) to a public source and (2) replace a pointer to a file with its content before it's added to the working tree by curling the url found in the pointer. Also supports pointing into and restoring individual files in zip archives (e.g. useful for restoring nuget packages during git fetch). Git-lfx is inspired by git-lfs (see: https://git-lfs.github.com/).</description>
+    <tags>lfx</tags>
+    <summary>Like nuget restore except for any file, zip, or self extracting archive on the web.</summary>
+    <description></description>
     <releaseNotes>Premier release.</releaseNotes>
     <dependencies />
   </metadata>
