--- a/Lfx/resources/nuget/v2/lib/package.props
+++ b/Lfx/resources/nuget/v2/lib/package.props
@@ -3,9 +3,11 @@
   xmlns="http://schemas.microsoft.com/developer/msbuild/2003"
   ToolsVersion="12.0"
 >
-  <PropertyGroup>
-    <_NugetPackageTargetFrameworkDir>$(MSBuildThisFileDirectory)</_NugetPackageTargetFrameworkDir>
-  </PropertyGroup>
+  <ItemGroup>
+    <NugetPackageDir Include="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory).., shim.props))\">
+      <TargetFrameworkSubDir>$([MSBuild]::MakeRelative(%(Identity)lib\, $(MSBuildThisFileDirectory)))</TargetFrameworkSubDir>
+    </NugetPackageDir>
+  </ItemGroup>
 
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory).., shim.props))\shim.props" />
 </Project>
